# osmium-surplus

./: .clang-tidy  CMakeLists.txt  README.md
.github/actions/install-macos/: action.yml
.github/actions/install-ubuntu/: action.yml
.github/workflows/: ci.yml
doc/: TEMPLATE.md  osp-analyze-limits.md  osp-analyze-line-or-polygon.md  osp-analyze-relation-types.md  osp-changeset-check-timestamps.md  osp-check-characters.md  osp-filter-relations-and-members.md  osp-find-and-fix-control-characters.md  osp-find-colocated-nodes.md  osp-find-multipolygon-problems.md  osp-find-orphans.md  osp-find-relation-problems.md  osp-find-unusual-tags.md  osp-find-way-problems.md  osp-history-stats-basic.md  osp-history-stats-users-coedit.md  osp-history-stats-users.md  osp-mark-topo-nodes.md  osp-proc-remove-tags.md  osp-stats-basic.md  osp-stats-duplicate-segments.md  osp-stats-non-moving-node-changes.md  osp-stats-tags-on-nodes.md  osp-stats-tags.md  osp-stats-way-node-refs-delta.md  osp-stats-way-nodes-idx.md  osp-stats-way-nodes.md
filter-patterns/: README.md  import-tags  linestring-tags  meta-tags  neutral-tags  polygon-tags
scripts/: stats-current-version-histogram.r
src/: CMakeLists.txt  app.cpp  app.hpp  date-convert.hpp  db.cpp  db.hpp  filter.cpp  filter.hpp  format.hpp  osp-analyze-limits.cpp  osp-analyze-line-or-polygon.cpp  osp-analyze-relation-types.cpp  osp-changeset-check-timestamps.cpp  osp-check-characters.cpp  osp-filter-relations-and-members.cpp  osp-find-and-fix-control-characters.cpp  osp-find-colocated-nodes.cpp  osp-find-multipolygon-problems.cpp  osp-find-orphans.cpp  osp-find-relation-problems.cpp  osp-find-unusual-tags.cpp  osp-find-way-problems.cpp  osp-history-stats-basic.cpp  osp-history-stats-users-coedit.cpp  osp-history-stats-users.cpp  osp-mark-topo-nodes.cpp  osp-proc-remove-tags.cpp  osp-stats-basic.cpp  osp-stats-duplicate-segments.cpp  osp-stats-non-moving-node-changes.cpp  osp-stats-tags-on-nodes.cpp  osp-stats-tags.cpp  osp-stats-way-node-refs-delta.cpp  osp-stats-way-nodes-idx.cpp  osp-stats-way-nodes.cpp  outputs.hpp  stats-basic.hpp  stats-vars.hpp  util.hpp  utils.hpp
test/: CMakeLists.txt  osp-analyze-line-or-polygon.sh
test/data/: colocated-nodes.osm.opl  spikes.osm
test/osp-analyze-line-or-polygon/: way-closed-area-error.expected  way-closed-area-error.opl  way-closed-both-tags.expected  way-closed-both-tags.opl  way-closed-line-tags-1.opl  way-closed-line-tags-2.expected  way-closed-line-tags-2.opl  way-closed-no-tags.opl  way-no-nodes.opl  way-not-closed.expected  way-not-closed.opl  way-one-node.expected  way-one-node.opl
